--- a/carousel.css
+++ b/carousel.css
@@ -1,5 +1,6 @@
 
-.carousel{
+.carousel {
+
     width: 99%;
     height: 291px;
     background-color: #EE394F;
@@ -8,7 +9,8 @@
     align-items: center;
     margin: 0 auto;
     border-radius: 10px;
-    .right{
+
+    .right {
         width: 13%;
         height: 90%;
         display: flex;
@@ -16,11 +18,12 @@
         align-items: flex-start;
         flex-flow: column wrap;
         margin-bottom: 15px;
-        .h1-1{
+
+        .h1-1 {
             width: 100%;
             height: 90px;
             color: white;
-            font-family:new;
+            font-family: new;
             font-weight: normal;
             line-height: 33px;
             display: flex;
@@ -29,18 +32,21 @@
             flex-flow: column;
             text-align: center;
             padding-bottom: 10px;
-            h3{
+
+            h3 {
 
                 font-size: 25px;
             }
 
         }
-        .mid-1{
+
+        .mid-1 {
             width: 100%;
             height: 30px;
             background-color: #EE394F;
         }
-        .icon-f{
+
+        .icon-f {
             width: 100%;
             height: 80px;
             display: flex;
@@ -48,7 +54,8 @@
             align-items: center;
             padding-top: 20px;
         }
-        .observ{
+
+        .observ {
             width: 100%;
             height: 26px;
             padding-top: 30px;
@@ -60,13 +67,15 @@
             padding-right: 15px;
         }
     }
-    .left{
+
+    .left {
         width: 87%;
         height: 255px;
     }
 
 }
-.picmain{
+
+.picmain {
     width: 100%;
     height: 250px;
     display: flex;
@@ -74,10 +83,15 @@
     align-items: center;
     flex-flow: column wrap;
     margin-top: 10px;
-    .pic1,.pic2,.pic3,.pic4{
+
+    .pic1,
+    .pic2,
+    .pic3,
+    .pic4 {
         width: 24%;
         height: 242px;
-        img{
+
+        img {
             width: 100%;
             height: inherit;
             object-fit: cover;
@@ -85,9 +99,10 @@
             border-radius: 17px;
         }
 
+    }
 }
-}
-.discount{
+
+.discount {
     width: 99%;
     height: 110px;
     margin: 0 auto;
@@ -95,17 +110,18 @@
     border-radius: 17px;
     margin-top: 15px;
     display: flex;
-    .right{
+
+    .right {
         width: 40%;
         height: 110px;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-       
-       
+
+
     }
 
-    .discount1{
+    .discount1 {
         width: 119px;
         height: 30px;
         display: flex;
@@ -114,60 +130,75 @@
         color: white;
         border-radius: 20px;
         background-color: #029A49;
-        font-family:yekan;
+        font-family: yekan;
         font-size: 14px;
 
 
     }
-    .right{
+
+    .right {
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-items: center;
         gap: 15px;
         width: 40%;
-       padding-left: 20px;
-        .right1{
+        padding-left: 20px;
+
+        .right1 {
             color: #029A49;
-         
+
         }
-        .icon1{
+
+        .icon1 {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-flow: row wrap;
-           
-            
+
+
         }
-    
+
     }
-    
-    }
-    .middle{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-flow: column wrap;
-        width: 50%;
-        height: inherit;
-        position: relative;
-       
-        .number1,.number2,.number3,.number4,.number5,.number6{
-            height: 75px;
-            width: 80px;
+
+}
+
+.middle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    width: 50%;
+    height: inherit;
+    position: relative;
+
+    .number1,
+    .number2,
+    .number3,
+    .number4,
+    .number5,
+    .number6 {
+        height: 75px;
+        width: 80px;
+        border-radius: 50%;
+        background-color: #FFFFFF;
+
+        img {
+            width: inherit;
+            height: inherit;
             border-radius: 50%;
-            background-color: #FFFFFF;
-            img{
-                width: inherit;
-                height: inherit;
-                border-radius:50%;
-                object-fit: cover;
-               
-            }
-           
+            object-fit: cover;
+
+        }
+
     }
-    
-    .value1,.value2,.value3,.value4,.value5,.value6{
+
+    .value1,
+    .value2,
+    .value3,
+    .value4,
+    .value5,
+    .value6 {
         width: 30px;
         height: 20px;
         border-radius: 20px;
@@ -179,52 +210,60 @@
         justify-content: center;
         align-items: center;
         font-size: 12px;
-       
-        
+
+
 
     }
-    .value1{
+
+    .value1 {
         position: absolute;
         top: 73px;
         left: 55px;
-        
+
     }
-    .value2{
+
+    .value2 {
         position: absolute;
         top: 73px;
-        left:165px;
+        left: 165px;
     }
-    .value3{
+
+    .value3 {
         position: absolute;
         top: 73px;
         left: 275px;
     }
-    .value4{
+
+    .value4 {
         position: absolute;
         top: 73px;
         left: 390px;
     }
-    .value5{
+
+    .value5 {
         position: absolute;
         top: 73px;
         right: 125px;
     }
-    .value6{
+
+    .value6 {
         position: absolute;
         top: 73px;
         right: 15px;
     }
-  
-   
+
+
 }
-.left{
+
+.left {
     width: 10%;
     height: inherit;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-left: 5px;
-    .button{
+
+    .button {
         color: #029A49;
         height: 50px;
         width: 150px;
@@ -233,19 +272,22 @@
         align-items: center;
         background-color: #FFFFFF;
         border-radius: 20px;
-        svg{
+
+        svg {
             margin-top: 10px;
-            
-          
+
+
         }
-        h4{
+
+        h4 {
             font-weight: 600;
-            font-size: 14px;
-            
+            font-size: 12px;
+
         }
     }
 }
-.pro{
+
+.pro {
     margin-right: 6px;
     margin-top: 15px;
     width: 99%;
@@ -256,10 +298,11 @@
     align-items: center;
     gap: 11px;
 
-    .staff{
+    .staff {
         width: 325px;
         height: inherit;
-        img{
+
+        img {
             width: inherit;
             height: inherit;
             object-fit: cover;
@@ -270,18 +313,17 @@
     }
 
 }
-.text{
+
+.text {
     width: 99%;
     height: 50px;
     margin-top: 40px;
     display: flex;
     justify-content: center;
     font-size: 10px;
-    
-   h1{
-    font-weight: normal;
-   }
+
+    h1 {
+        font-weight: normal;
+    }
 }
-
-
 
