--- a/item-1.css
+++ b/item-1.css
@@ -1,4 +1,5 @@
-.item-1{
+
+.item-1 {
     width: 100%;
     height: 149px;
     display: flex;
@@ -6,22 +7,33 @@
     align-items: center;
     gap: 30px;
 
-    .first,.second,.third,.fourth,.fifth,.sixth,.seventh,.eight,.ninth,.ten{
+    .first,
+    .second,
+    .third,
+    .fourth,
+    .fifth,
+    .sixth,
+    .seventh,
+    .eight,
+    .ninth,
+    .ten {
         width: 90px;
         height: inherit;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-flow: column wrap;
-        img{
+
+        img {
             width: 50px;
             height: 50px;
             border-radius: 50%;
             margin-bottom: 10px;
-           
-           
+
+
         }
-        span{
+
+        span {
             text-align: center;
             font-size: 12px;
             font-weight: normal;
@@ -29,9 +41,11 @@
             opacity: 0.8;
         }
     }
-    .eight{
+
+    .eight {
         margin-bottom: 20px;
     }
 
 
 }
+
