--- a/story.css
+++ b/story.css
@@ -1,63 +1,63 @@
-.story{
-    margin-top: 10px;
-    width: 100%;
-    height: 180px;
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    padding-right: 10px;
-    .swiper-slide{
-      position: relative;
-    }
-    .swiper-slide img {
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 83px;
-      object-fit: cover;
-      object-position: center;
-      border-radius: 50%;
-      outline: 1px solid red;
-      outline-offset: 3px;
-      top: 10%;
-      right:15% ;
-    }
-    .swiper-slide {
-      width: 100%;
-      position: relative;
-      text-align: center;
-      background: #fff;
-      display: flex;
-      flex-flow: column wrap;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      .caption{
-        width: 120%;
-        height: 30px;
-        font-size: 12px;
-        position: absolute;
-        top: 61%;
-        right: 5%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        line-height: 20px;
-        border: none;
-        opacity: 0.7;
-      }     
-     
-    }
-  
-}
-.swiper {
-    width: 100%;
-    height: 100%;
-   
-    
+.story {
+  margin-top: 10px;
+  width: 100%;
+  height: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 10px;
+
+  .swiper-slide {
+    position: relative;
   }
 
-  
+  .swiper-slide img {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 83px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    outline: 1px solid #D14198;
+    outline-offset: 3px;
+    top: 10%;
+    right: 15%;
+  }
 
- 
+  .swiper-slide {
+    width: 100%;
+    position: relative;
+    text-align: center;
+    background: #fff;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 
+    .caption {
+      width: 120%;
+      height: 30px;
+      font-size: 12px;
+      position: absolute;
+      top: 61%;
+      right: 5%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      line-height: 20px;
+      border: none;
+      opacity: 0.7;
+    }
+
+  }
+
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+
+
+}
